--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,15 +34,6 @@ input[type="text"] {
     width: 200px;
 }
 
-.input-group.md-form.form-sm.form-2 input {
-    border: 1px solid #dfdfdf;
-    border-radius: 5px;
-  }
-
-.input-group.md-form.form-sm.form-2 input.amber-border {
-    border: 1px solid #ced4da;
-  }
-
 /* Creating a border for the city display information */
 .city-display-border {
     border-radius: 5px;
@@ -55,6 +46,8 @@ input[type="text"] {
     font-weight: 600;
 }
 
-.history-content {
+/* Styling for the history content */
+.history-form {
     cursor: pointer;
+    margin-left: -20px;
 }
